add: get menu method
