# docs/swagger.yaml
@@ -1,5 +1,25 @@
 basePath: /
 definitions:
+  dto.ContentDTO:
+    properties:
+      items:
+        items:
+          $ref: '#/definitions/dto.ItemDTO'
+        type: array
+      kind:
+        type: string
+    type: object
+  dto.CreateMenuRequestDTO:
+    properties:
+      day_menus:
+        items:
+          $ref: '#/definitions/dto.DayMenuDTO'
+        type: array
+      title:
+        type: string
+    required:
+    - title
+    type: object
   dto.CreateUserRequestDTO:
     properties:
       address:
@@ -18,6 +38,22 @@ definitions:
     - name
     - password
     type: object
+  dto.DayMenuDTO:
+    properties:
+      contents:
+        items:
+          $ref: '#/definitions/dto.ContentDTO'
+        type: array
+      day:
+        type: string
+      image:
+        type: string
+    type: object
+  dto.ItemDTO:
+    properties:
+      name:
+        type: string
+    type: object
   dto.LoginRequest:
     properties:
       email:
@@ -35,6 +71,17 @@ definitions:
         type: string
       user:
         $ref: '#/definitions/dto.UserDTO'
+    type: object
+  dto.MenuDTO:
+    properties:
+      day_menus:
+        items:
+          $ref: '#/definitions/dto.DayMenuDTO'
+        type: array
+      id:
+        type: integer
+      title:
+        type: string
     type: object
   dto.UserDTO:
     properties:
@@ -72,6 +119,42 @@ info:
   title: Helper Backend
   version: "1.0"
 paths:
+  /api/v1/menu/:
+    get:
+      description: Get all menu
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.MenuDTO'
+            type: array
+      summary: Get all menu
+      tags:
+      - menu
+    post:
+      consumes:
+      - application/json
+      description: Create a new menu with the input paylod
+      parameters:
+      - description: create menu
+        in: body
+        name: menu_info
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateMenuRequestDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.MenuDTO'
+      summary: Create a new menu
+      tags:
+      - menu
   /api/v1/user/:
     get:
       consumes:
